fix aos overflow-x

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -614,3 +614,6 @@ main {
       color: black; }
   .e404div .e404p {
     font-size: 1.3rem; }
+
+.container-fluid {
+  overflow: hidden; }
